--- a/app/src/main/res/layout/fragment_trackers_map.xml
+++ b/app/src/main/res/layout/fragment_trackers_map.xml
@@ -59,6 +59,144 @@
                     android:textSize="20sp" />
             </FrameLayout>
 
+
+            <FrameLayout
+                android:id="@+id/poiInfo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:layout_marginLeft="12dp"
+                android:layout_marginRight="12dp"
+                android:background="@color/mapHoverBg"
+                android:visibility="@{viewModel.currentPoi == null ? View.GONE: View.VISIBLE}">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="?attr/actionBarSize"
+                    android:orientation="vertical"
+                    android:padding="4dp"
+                    tools:ignore="SmallSp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@{viewModel.currentPoi.name}"
+                        android:textColor="#fff"
+                        android:textSize="14sp" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:weightSum="5">
+
+                        <FrameLayout
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="3">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/owner"
+                                android:textColor="#fff"
+                                android:textSize="12sp" />
+
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="end|center_vertical"
+                                android:gravity="center_vertical">
+
+                                <ImageView
+                                    android:layout_width="20dp"
+                                    android:layout_height="20dp"
+                                    android:src="@{MarkerHelper.getUserBitmap(viewModel.currentPoi.getUser())}" />
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginLeft="4dp"
+                                    android:text="@{viewModel.currentPoi.getUser().getName()}"
+                                    android:textColor="#fff"
+                                    android:textSize="12sp" />
+                            </LinearLayout>
+
+                        </FrameLayout>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:orientation="horizontal">
+
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:orientation="vertical">
+
+                            <no.appsonite.gpsping.widget.CustomFontTextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@{@string/latNMap(viewModel.currentPoi.getLat())}"
+                                android:textColor="#fff"
+                                android:textSize="10sp"
+                                app:typeface="Roboto-Light.ttf" />
+
+                            <no.appsonite.gpsping.widget.CustomFontTextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@{@string/lonNMap(viewModel.currentPoi.getLon())}"
+                                android:textColor="#fff"
+                                android:textSize="10sp"
+                                app:typeface="Roboto-Light.ttf" />
+
+                            <no.appsonite.gpsping.widget.CustomFontTextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@{@string/grsmNMap(viewModel.currentPoi.getGRSM())}"
+                                android:textColor="#fff"
+                                android:textSize="10sp"
+                                app:typeface="Roboto-Light.ttf" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:gravity="center"
+                            android:orientation="vertical"
+                            android:visibility="@{viewModel.currentPoi.isMine()?View.VISIBLE:View.GONE}">
+
+                            <TextView
+                                android:id="@+id/editPoi"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_horizontal"
+                                android:clickable="true"
+                                android:text="@string/editPoi"
+                                android:textColor="#fff"
+                                android:textSize="12sp" />
+
+                            <TextView
+                                android:id="@+id/deletePoi"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_horizontal"
+                                android:layout_marginTop="12dp"
+                                android:clickable="true"
+                                android:text="@string/deletePoi"
+                                android:textColor="#fff"
+                                android:textSize="12sp" />
+                        </LinearLayout>
+                    </LinearLayout>
+                </LinearLayout>
+
+            </FrameLayout>
+
             <FrameLayout
                 android:id="@+id/mapPointInfo"
                 android:layout_width="match_parent"
