--- a/app/src/main/res/layout/fragment_trackers_map.xml
+++ b/app/src/main/res/layout/fragment_trackers_map.xml
@@ -60,6 +60,20 @@
                     android:textSize="20sp" />
             </FrameLayout>
 
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="?attr/actionBarSize">
+                <ImageView
+                    android:id="@+id/compass"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginRight="16dp"
+                    android:src="@drawable/compass"
+                    android:layout_gravity="end"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp" />
+            </FrameLayout>
+
 
             <FrameLayout
                 android:id="@+id/poiInfo"
