--- a/app/src/main/res/layout/fragment_add_tracker.xml
+++ b/app/src/main/res/layout/fragment_add_tracker.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -134,8 +135,7 @@
                                 android:id="@+id/signalTimeSpinner"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
-                                android:entries="@array/receiveSignalTime"
-                                />
+                                android:entries="@array/receiveSignalTime" />
 
                             <View
                                 android:layout_width="match_parent"
@@ -165,6 +165,137 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginBottom="16dp"
+                    android:layout_marginTop="0dp"
+                    android:background="@drawable/form_bg"
+                    android:orientation="vertical"
+                    android:padding="16dp"
+                    android:visibility="@{viewModel.isBikeTracker()}">
+
+                    <no.appsonite.gpsping.widget.CustomFontTextView
+                        style="@style/AppTheme.widget.FormTitle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/bikeTracking" />
+
+                    <FrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="72dp"
+                        android:layout_marginTop="24dp">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginTop="-12dp"
+                            android:text="@string/ledLight"
+                            android:textColor="#000"
+                            android:textSize="20sp" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginTop="12sp"
+                            android:text="@{viewModel.tracker.ledActive?@string/active:@string/inactive}"
+                            android:textColor="@{viewModel.tracker.ledActive?@color/colorPrimary:@color/colorAccent}"
+                            tools:text="Active" />
+
+                        <TextView
+                            android:id="@+id/ledActive"
+                            style="@style/AppTheme.widget.Button.Gray"
+                            android:layout_width="100dp"
+                            android:layout_height="36dp"
+                            android:layout_gravity="end|center_vertical"
+                            android:layout_marginRight="0dp"
+                            android:background="@{viewModel.tracker.ledActive?@drawable/button_gray_new:@drawable/button_green_new}"
+                            android:text="@{viewModel.tracker.ledActive?@string/turnOff:@string/turnOn}"
+                            android:textAllCaps="true"
+                            android:textColor="@{viewModel.tracker.ledActive?@android:color/black:@android:color/white}"
+                            android:textSize="16sp"
+                            tools:text="turn off" />
+                    </FrameLayout>
+
+                    <FrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="72dp">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginTop="-12dp"
+                            android:text="@string/shockAlarm"
+                            android:textColor="#000"
+                            android:textSize="20sp" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginTop="12sp"
+                            android:text="@{viewModel.tracker.shockAlarmActive?@string/active:@string/inactive}"
+                            android:textColor="@{viewModel.tracker.shockAlarmActive?@color/colorPrimary:@color/colorAccent}"
+                            tools:text="Active" />
+
+                        <TextView
+                            android:id="@+id/shockAlarmActive"
+                            style="@style/AppTheme.widget.Button.Gray"
+                            android:layout_width="100dp"
+                            android:layout_height="36dp"
+                            android:layout_gravity="end|center_vertical"
+                            android:layout_marginRight="0dp"
+                            android:background="@{viewModel.tracker.shockAlarmActive?@drawable/button_gray_new:@drawable/button_green_new}"
+                            android:text="@{viewModel.tracker.shockAlarmActive?@string/turnOff:@string/turnOn}"
+                            android:textAllCaps="true"
+                            android:textColor="@{viewModel.tracker.shockAlarmActive?@android:color/black:@android:color/white}"
+                            android:textSize="16sp"
+                            tools:text="turn off" />
+                    </FrameLayout>
+
+                    <FrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="72dp">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginTop="-12dp"
+                            android:text="@string/shockFlashAlarm"
+                            android:textColor="#000"
+                            android:textSize="20sp" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginTop="12sp"
+                            android:text="@{viewModel.tracker.shockFlashActive?@string/active:@string/inactive}"
+                            android:textColor="@{viewModel.tracker.shockFlashActive?@color/colorPrimary:@color/colorAccent}"
+                            tools:text="Active" />
+
+                        <TextView
+                            android:id="@+id/shockFlashActive"
+                            style="@style/AppTheme.widget.Button.Gray"
+                            android:layout_width="100dp"
+                            android:layout_height="36dp"
+                            android:layout_gravity="end|center_vertical"
+                            android:layout_marginRight="0dp"
+                            android:background="@{viewModel.tracker.shockFlashActive?@drawable/button_gray_new:@drawable/button_green_new}"
+                            android:text="@{viewModel.tracker.shockFlashActive?@string/turnOff:@string/turnOn}"
+                            android:textAllCaps="true"
+                            android:textColor="@{viewModel.tracker.shockFlashActive?@android:color/black:@android:color/white}"
+                            android:textSize="16sp"
+                            tools:text="turn off" />
+                    </FrameLayout>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
                     <TextView
@@ -188,6 +319,7 @@
                         android:text="@string/reset"
                         android:visibility="@{viewModel.editMode}" />
                 </LinearLayout>
+
 
             </LinearLayout>
 
