--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -23,62 +23,73 @@
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
             app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-
-        <LinearLayout
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="vertical">
+            android:layout_height="wrap_content">
 
-            <!--<TextView-->
-            <!--android:id="@+id/trackers"-->
-            <!--style="@style/AppTheme.widget.Button.Green"-->
-            <!--android:layout_gravity="center_horizontal"-->
-            <!--android:layout_marginTop="@dimen/button_margin_top"-->
-            <!--android:text="@string/trackers" />-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/connect"
-                style="@style/AppTheme.widget.Button.Green"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/button_margin_top"
-                android:text="@string/connect" />
+                <!--<TextView-->
+                <!--android:id="@+id/trackers"-->
+                <!--style="@style/AppTheme.widget.Button.Green"-->
+                <!--android:layout_gravity="center_horizontal"-->
+                <!--android:layout_marginTop="@dimen/button_margin_top"-->
+                <!--android:text="@string/trackers" />-->
 
-            <TextView
-                android:id="@+id/geofence"
-                style="@style/AppTheme.widget.Button.Green"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/button_margin_top"
-                android:text="@string/geofence" />
+                <TextView
+                    android:id="@+id/connect"
+                    style="@style/AppTheme.widget.Button.Green"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="24dp"
+                    android:text="@string/connect" />
 
-            <TextView
-                android:id="@+id/profile"
-                style="@style/AppTheme.widget.Button.Green"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/button_margin_top"
-                android:text="@string/profile" />
+                <TextView
+                    android:id="@+id/geofence"
+                    style="@style/AppTheme.widget.Button.Green"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="@dimen/button_margin_top"
+                    android:text="@string/geofence" />
 
-            <TextView
-                android:id="@+id/displayOptions"
-                style="@style/AppTheme.widget.Button.Green"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/button_margin_top"
-                android:text="@string/displayOptions" />
+                <TextView
+                    android:id="@+id/profile"
+                    style="@style/AppTheme.widget.Button.Green"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="@dimen/button_margin_top"
+                    android:text="@string/profile" />
 
-            <TextView
-                android:id="@+id/pauseSubscription"
-                style="@style/AppTheme.widget.Button.Green"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/button_margin_top"
-                android:text="@string/pauseSubscription" />
+                <TextView
+                    android:id="@+id/displayOptions"
+                    style="@style/AppTheme.widget.Button.Green"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="@dimen/button_margin_top"
+                    android:text="@string/displayOptions" />
 
-            <TextView
-                android:id="@+id/about"
-                style="@style/AppTheme.widget.Button.Green"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/button_margin_top"
-                android:text="@string/about" />
-        </LinearLayout>
+                <TextView
+                    android:id="@+id/pauseSubscription"
+                    style="@style/AppTheme.widget.Button.Green"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="@dimen/button_margin_top"
+                    android:text="@string/pauseSubscription" />
+
+                <TextView
+                    android:id="@+id/faq"
+                    style="@style/AppTheme.widget.Button.Green"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="@dimen/button_margin_top"
+                    android:text="@string/faq" />
+
+                <TextView
+                    android:id="@+id/about"
+                    style="@style/AppTheme.widget.Button.Green"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="@dimen/button_margin_top"
+                    android:text="@string/about" />
+            </LinearLayout>
+        </ScrollView>
 
 
     </LinearLayout>
